<resources>
    <string name="app_name">MDPGroup23</string>
    <string name="action_settings">Settings</string>
    <string name="action_bluetooth">Bluetooth</string>
    <string name="set_car_coordinates">Set Car Coordinates</string>
    <string name="set_obstacle">Set Obstacle</string>
    <string name="bluetooth_connection">Not Connected</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_car_direction">Set Car Direction</string>
    <string name="reset_Map">Reset Map</string>
    <string name="send_Map">Send Map</string>
</resources>
